--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -2,13 +2,35 @@
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
   color: #2c3e50;
-  margin-top: 60px;
+}
+.center{
+  text-align: center;
+}
+.style-common{
+  font-size: 26px;
+  margin-top: 20px;
+}
+.pad15{
+  padding: 0 15px;
+}
+.slider{
+  width: 30%;
+  float: left;
+  font-size: 18px;
+  margin-top: 20px;
+  border-right: 2px solid goldenrod;
+}
+.po-right{
+  width: 50%;
+  float: right;
+  font-size: 26px;
+  display: inline-block;
+  margin-top: 20px;
 }
 .nav-box{
   background: #eff4f8;
-  padding: 0px 300px;
+  padding: 0px 250px;
 }
 .nav{
   overflow: hidden;
@@ -20,4 +42,20 @@
 }
 .nav li a{
   text-align: center;
+  text-decoration: none;
+}
+/*若不指明linkActiveClass: 'is-active'，则选中状态的class默认为router-link-active*/
+.router-link-active{
+  background: rebeccapurple;
+}
+.is-active {
+  background: indianred;
+  color: #fff;
+}
+.own-active {
+  background: green;
+  color: #fff;
+}
+.user-list,.user-info,.info-list{
+  margin-top: 20px;
 }
