--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -8,6 +8,11 @@
   text-align: center;
 }
 .style-common{
+  width: 100%;
+  height:100%;
+  position: absolute;
+  left: 0px;
+  top: 100px;
   font-size: 26px;
   margin-top: 20px;
 }
